// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormSignup Component > Debe mostrar un error si el registro falla 1`] = `
<div>
  <form
    class="cardform__form"
  >
    <label
      class="form__label--required"
      for="nombre"
    >
      Nombre Completo
    </label>
    <input
      class="form__input"
      id="fullname"
      name="nombre"
      placeholder="Ingrese su nombre completo"
      required=""
      type="text"
    />
    <label
      class="form__label--required"
      for="email"
    >
      Correo
    </label>
    <input
      class="form__input"
      id="email"
      name="email"
      placeholder="Ingrese su correo"
      required=""
      type="email"
    />
    <label
      class="form__label--required"
      for="password"
    >
      Contraseña
    </label>
    <input
      class="form__input"
      id="password"
      name="password"
      placeholder="Ingrese su contraseña"
      required=""
      type="password"
    />
    <button
      class="form__button"
      type="submit"
    >
      Crear Cuenta
    </button>
    <p
      class="error-message"
    >
      Error en el registro
    </p>
  </form>
</div>
`;

exports[`FormSignup Component > Debe permitir el registro exitoso 1`] = `
<div>
  <form
    class="cardform__form"
  >
    <label
      class="form__label--required"
      for="nombre"
    >
      Nombre Completo
    </label>
    <input
      class="form__input"
      id="fullname"
      name="nombre"
      placeholder="Ingrese su nombre completo"
      required=""
      type="text"
    />
    <label
      class="form__label--required"
      for="email"
    >
      Correo
    </label>
    <input
      class="form__input"
      id="email"
      name="email"
      placeholder="Ingrese su correo"
      required=""
      type="email"
    />
    <label
      class="form__label--required"
      for="password"
    >
      Contraseña
    </label>
    <input
      class="form__input"
      id="password"
      name="password"
      placeholder="Ingrese su contraseña"
      required=""
      type="password"
    />
    <button
      class="form__button"
      type="submit"
    >
      Crear Cuenta
    </button>
  </form>
</div>
`;
